manifest/dips-ehr.yaml
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.40.2/deploy/static/provider/cloud/deploy.yaml
# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=localhost/O=localhost"

apiVersion: v1
kind: Namespace
metadata:
  name: ns-dips-ehr
  labels:
    app.kubernetes.io/name: ns-dips-ehr
    app.kubernetes.io/instance: ns-dips-ehr 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dips-ehr-security-app
  namespace: ns-dips-ehr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dips-ehr-security  
  template:
    metadata:
      labels:
        app: dips-ehr-security
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: dips-ehr-security
        image: thorstenbaek/dips-ehr-security:latest
        ports:        
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: security-service
  namespace: ns-dips-ehr
spec:
  selector:
    app: dips-ehr-security
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dips-fhir-service-app
  namespace: ns-dips-ehr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dips-fhir-service  
  template:
    metadata:
      labels:
        app: dips-fhir-service
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: dips-fhir-service
        image: thorstenbaek/dips-fhir-service:v1.0.0.0
        ports:        
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: fhir-service
  namespace: ns-dips-ehr
spec:
  selector:
    app: dips-fhir-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80      
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-acme-challenge-app
  namespace: ns-dips-ehr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-acme-challenge  
  template:
    metadata:
      labels:
        app: static-acme-challenge
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: static-acme-challenge
        image: thorstenbaek/static-acme-challenge:latest
        ports:        
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: static-acme-challenge-service
  namespace: ns-dips-ehr
spec:
  selector:
    app: static-acme-challenge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80         
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: ns-dips-ehr 
  annotations:
    kubernetes.io/ingress.class: nginx    
    nginx.ingress.kubernetes.io/rewrite-target: /$2    
    service.beta.kubernetes.io/azure-dns-label-name: dips-ehr # => http://dips-ehr.norwayeast.cloudapp.azure.com/
spec:
  tls:
  - hosts:       
      - localhost
    secretName: ssl-certificate
  rules:  
  - host: localhost
    http:
      paths:      
      - path: /fhir-service(/|$)(.*)
        backend:
          serviceName: fhir-service
          servicePort: 80
      - path: /security(/|$)(.*)        
        backend:
          serviceName: security-service
          servicePort: 80
  - host: dips-ehr.norwayeast.cloudapp.azure.com
    http:
      paths:      
      - path: /fhir-service(/|$)(.*)
        backend:
          serviceName: fhir-service
          servicePort: 80
      - path: /security(/|$)(.*)
        backend:
          serviceName: security-service
          servicePort: 80
